--- a/public/group_members.html
+++ b/public/group_members.html
@@ -62,33 +62,33 @@
                 <thead class="thead-dark">
                     <tr>
                         <th scope="col"><i class="fa fa-user fa-fw"></i> Student Name</th>
-                        <th scope="col"><i class="fa fa-id-card fa-fw"></i> Banner ID</th>
+                        <th scope="col"><i class="fa fa-id-card fa-fw"></i> LinkedIn</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td>Shian Li Chen</td>
-                        <td>100813628</td>
+                        <td><a href="https://www.linkedin.com/in/shian-li-chen-5b65491ab/" target="_blank">LinkedIn</a></td>
                     </tr>
                     <tr>
                         <td>Thanushan Satheeskumar</td>
-                        <td>100784004</td>
+                        <td><a href="https://www.linkedin.com/in/thanushan925/" target="_blank">LinkedIn</a></td>
                     </tr>
                     <tr>
                         <td>James Yang</td>
-                        <td>100838500</td>
+                        <td><a href="https://www.linkedin.com/in/jameszhyang/" target="_blank">LinkedIn</a></td>
                     </tr>
                     <tr>
                         <td>Jayanthan Caithesan</td>
-                        <td>100828033</td>
+                        <td><a href="https://www.linkedin.com/in/jay-caithesan/" target="_blank">LinkedIn</a></td>
                     </tr>
                     <tr>
                         <td>Ryan Don</td>
-                        <td>100824494</td>
+                        <td><a href="https://www.linkedin.com/in/ryan-don/" target="_blank">LinkedIn</a></td>
                     </tr>
                     <tr>
                         <td>Joshua Jesuthasan</td>
-                        <td>100820441</td>
+                        <td><a href="https://www.linkedin.com/in/joshua-jesuthasan-197bb5188/" target="_blank">LinkedIn</a></td>
                     </tr>
                 </tbody>
             </table>
